--- a/index.html
+++ b/index.html
@@ -1,34 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Startup</title>
-
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
-	<!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-	<!-- Your own stylesheet -->
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Faisal</title>
 </head>
 <body>
-	<div class="container d-flex align-items-center h-100">
-		<div class="row">
-			<header class="text-center col-12">				
-				<h1 class="text-uppercase"><strong>the biggest startup event of the year</strong></h1>
-			</header>	
-			<div class="buffer col-12"></div>
-			<section class="text-center col-12">				
-				<hr>
-				<a href="subscrib.html">
-					<button  class="btn btn-primary btn-xl">Find out more</button>
-				</a>
-			</section>	
-		</div>		
-	</div>
+    <head>
+        <h1>Comming soon</h1>
+        <div class="pro__pic">
+           <img src="/img/IMG_5110.jpg" alt="Faisal"> 
+           <p>Syed Faisal Ali Al Koreshi</p>
+        </div>  
+ </head>
 </body>
 </html>
