add to a master

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="pro__pic">
            <img src="/img/IMG_5110.jpg" alt="Faisal"> 
            <p>Syed Faisal Ali Al Koreshi</p>
+           <p>faisal</p>
         </div>  
  </head>
 </body>
