--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="pro__pic">
            <img src="/img/IMG_5110.jpg" alt="Faisal"> 
            <p>Syed Faisal Ali Al Koreshi</p>
-           <P>Faisal</P>
+           <P class="nick_name">Faisal</P>
         </div>  
  </head>
 </body>
