--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
            <img src="/img/IMG_5110.jpg" alt="Faisal"> 
            <p>Syed Faisal Ali Al Koreshi</p>
            <P class="nick_name">Faisal</P>
+           <p>email:faisal.koreshi@gmail.com</p>
         </div>  
  </head>
 </body>
